--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <div class="input-group">
                             <span class="input-group-text" id="basic-addon1"><i
                                     class="fa-solid fa-magnifying-glass"></i></span>
-                            <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat"
+                            <input v-model="searchInput" @input="userSearch()" type="text" class="form-control" placeholder="Cerca o inizia una nuova chat"
                                 aria-label="Username" aria-describedby="basic-addon1">
                         </div>
 
@@ -84,7 +84,7 @@
             <div class="col-8 p-0">
                 <div class="backgroundBox overflow-y-scroll">
                     <div class="mt-5">
-                        <div v-for="(value, i) in contacts[counter].messages"
+                        <div v-for="value in contacts[counter].messages"
                             :class="value.status=='sent' ? 'sentMsg msg d-flex' : 'receivedMsg msg d-flex'">
                             <p>{{ value.message }}</p>
                             <span class="msgTime">{{value.date}}</span>
