--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <div class="input-group">
                             <span class="input-group-text" id="basic-addon1"><i
                                     class="fa-solid fa-magnifying-glass"></i></span>
-                            <input v-model="searchInput" @input="userSearch()" type="text" class="form-control" placeholder="Cerca o inizia una nuova chat"
+                            <input v-model="searchInput" @keyup.delete="searchRestore()" @input="userSearch()" type="text" class="form-control" placeholder="Cerca o inizia una nuova chat"
                                 aria-label="Username" aria-describedby="basic-addon1">
                         </div>
 
